--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
    <head>
        <title>Slider automatico</title>
        <meta charset="UTF-8">       
-       <link rel="stylesheet" href="/css/estilos.css">
+       <link rel="stylesheet" href="css/estilos.css">
    </head>
    
     <body>
