change from repository

--- a/index.html
+++ b/index.html
@@ -15,5 +15,6 @@
                <li><img src="images/image4.jpg" alt=""></li>
            </ul>
        </div>
+       <div></div>
    </body>
 </html>
