--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
                <li><img src="images/image4.jpg" alt=""></li>
            </ul>
        </div>
-       <div></div>
+       <div>
+         <h2>Hello</h2>
+       </div>
    </body>
 </html>
