change from repository

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
            </ul>
        </div>
        <div>
-           <h2>Hello</h2>
-           <p>Local</p>
+           <h2>Hello my friend</h2>
+           <p>Local is now</p>
        </div>
    </body>
 </html>
