--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
            </ul>
        </div>
        <div style="background:#61889A;height:150px;">
-           <p>Local from quito</p>
-           <h1>Tester</h1>
+           <p>Local from quito ecuador</p>
+           <h1>Tester ecuador</h1>
        </div>
    </body>
 </html>
