--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
            </ul>
        </div>
        <div style="background:#61889A;height:150px;">
-           <p>Local from local</p>
-           <h1>Tester local</h1>
+           <p>Local from repo</p>
+           <h1>Tester repo</h1>
        </div>
    </body>
 </html>
