--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
            </ul>
        </div>
        <div style="background:#61889A;height:150px;">
-           <p>Local from local</p>
-           <h1>Tester local</h1>
-		   <h1>Tester 1</h1>
+           <p>Local from repo</p>
+           <h1>Tester repo</h1>
+	   <h1>Tester repo</h1>
        </div>
    </body>
 </html>
