--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
                <li><img src="images/image4.jpg" alt=""></li>
            </ul>
        </div>
-       <div style="background:#61889A;height:150px;">
+       <div style="background:#61889A;height:150px;">           
            <p>Local from repo</p>
+           <p>Local 1</p>
        </div>
    </body>
 </html>
