--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
        </div>
        <div style="background:#61889A;height:150px;">
           <h1>Titulo</h1>
-          <p1>Parrafo 1</p1>
+          <p1>Parrafo repo</p1>
        </div>
    </body>
 </html>
